# bevy2

./: Cargo.toml  Dockerfile  README.md  devsetup.sh  docker-compose.yaml  wasm-build.sh  wasm-run.sh  wasm-serve.sh
src/: lib.rs  main.rs
src/client/: main.rs
src/client-wasm/: main.rs
src/demo_fetch_api/: fetch_api_plugin.rs  mod.rs
src/demo_heavy_compute/: heavy_compute_plugin.rs  mod.rs
src/demo_my_plugin/: mod.rs  my_plugin.rs
src/server/: main.rs
